Update rtklib to compile in windows
Update makefile and sources to work with mingw
Tested in:
	convbin
	rnx2rtkp
	pos2kml

Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/app/pos2kml/gcc/makefile
+++ b/app/pos2kml/gcc/makefile
@@ -5,6 +5,12 @@ SRC    = ../../../src
 CFLAGS_CMN = -Wall -ansi -pedantic -I$(SRC) -DTRACE
 LDLIBS  = -lm -lrt
 
+ifeq ($(OS), Linux)
+	LDLIBS = -lm -lrt
+else
+	LDLIBS = -lm -lwinmm
+endif
+
 OBJS = pos2kml.o convkml.o erb.o convgpx.o solution.o geoid.o rtkcmn.o preceph.o
     
 .DEFAULT_GOAL := release
