solve bug with winsock
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/app/rnx2rtkp/gcc/makefile
+++ b/app/rnx2rtkp/gcc/makefile
@@ -12,7 +12,7 @@ CFLAGS  = -Wall -O3 -ansi -pedantic -I$(SRC) $(OPTS) -g
 ifeq ($(OS), Linux)
 	LDLIBS = -lm -lrt
 else
-	LDLIBS = -lm -lwinmm
+	LDLIBS = -lm -lwinmm -lws2_32
 endif
 
 #CFLAGS  = -Wall -O3 -ansi -pedantic -Wno-unused-but-set-variable -I$(SRC) -DLAPACK $(OPTS)
