add debug function in appveyor
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,8 +45,11 @@ build_script:
   - set PATH=C:\MinGW\bin;%PATH%
   - cd C:\MinGW\bin
   - ls
+
   - cd "%APPVEYOR_BUILD_FOLDER%\lib\iers\gcc"
   - ls
+  - ls ../
+  - ls ../src
   - mingw32-make CC=gcc
   - ls
 
