we need fortran
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -45,6 +45,7 @@ build_script:
   - set PATH=C:\MinGW\bin;%PATH%
   - cd C:\MinGW\bin
   - ls
+  - Get-ChildItem -Path C:\ fortran -Recurse
 
   - cd "%APPVEYOR_BUILD_FOLDER%\lib\iers\gcc"
   - ls
