Solve problem with ldlibs
Signed-off-by: Patrick José Pereira <patrickelectric@gmail.com>

--- a/app/rnx2rtkp/gcc/makefile
+++ b/app/rnx2rtkp/gcc/makefile
@@ -6,13 +6,13 @@ SRC     = ../../../src
 OPTIONS    = -DTRACE -DENAGLO -DENAQZS -DENAGAL -DENACMP -DENAIRN -DNFREQ=3 -DIERS_MODEL
 # for no lapack
 CFLAGS_CMN = -Wall -fno-strict-overflow -ansi -pedantic -Wno-unused-but-set-variable -I$(SRC) $(OPTIONS) -g
-LDLIBS  = ../../../lib/iers/gcc/iers.a -lgfortran -lm -lrt -lpthread
+LDLIBS  = ../../../lib/iers/gcc/iers.a -lgfortran -lm -lpthread
 CFLAGS  = -Wall -O3 -ansi -pedantic -I$(SRC) $(OPTS) -g
 
 ifeq ($(OS), Linux)
-	LDLIBS += -lm -lrt
+	LDLIBS += -lrt
 else
-	LDLIBS += -lm -lwinmm -lws2_32
+	LDLIBS += -lwinmm -lws2_32
 endif
 
 #CFLAGS  = -Wall -O3 -ansi -pedantic -Wno-unused-but-set-variable -I$(SRC) -DLAPACK $(OPTS)
