--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,7 +43,8 @@ before_build:
 build_script:
   - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%
   #- set PATH=C:\MinGW\bin;%PATH%
-  - set PATH=C:\msys64\mingw32\bin\;C:\MinGW\bin;C:\Qt\Tools\mingw530_32\bin\;%PATH%
+  #- set PATH=C:\msys64\mingw32\bin\;C:\MinGW\bin;C:\Qt\Tools\mingw530_32\bin\;%PATH%
+  - set PATH=C:\Qt\Tools\mingw530_32\bin\;%PATH%
   - cd
   - ls
   #- dir /s/b "C:\*fortran*"
